--- a/package.json
+++ b/package.json
@@ -50,14 +50,15 @@
   },
   "dependencies": {
     "@emotion/css": "^11.7.1",
+    "bootstrap": "^5.1.3",
     "electron": "^16.0.4",
     "electron-json-storage": "^4.5.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.6.1",
-    "npm": "^8.5.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.2",
+    "reactstrap": "^9.0.1",
     "typescript": "^4.5.2"
   },
   "devDependencies": {
